--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,41 +1,43 @@
-<div class="register-container">
-  <h2>Crear Cuenta Nueva</h2>
-  
-  <form (ngSubmit)="onRegister()">
+<div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="neo-card" style="width: 100%; max-width: 400px;">
+    <h2 class="text-center mb-4">Crear Cuenta</h2>
     
-    <div class="form-group">
-      <label for="email">Correo Electrónico</label>
-      <input 
-        type="email" 
-        id="email" 
-        [(ngModel)]="user.email" 
-        name="email" 
-        required 
-        placeholder="ejemplo@correo.com">
-    </div>
+    <form (ngSubmit)="onRegister()">
+      
+      <div class="neo-form-group">
+        <input required 
+               type="email" 
+               name="email" 
+               [(ngModel)]="user.email" 
+               class="neo-input">
+        <label class="label">Correo Electrónico</label>
+      </div>
 
-    <div class="form-group">
-      <label for="password">Contraseña</label>
-      <input 
-        type="password" 
-        id="password" 
-        [(ngModel)]="user.password" 
-        name="password" 
-        required>
-    </div>
+      <div class="neo-form-group">
+        <input required 
+               type="password" 
+               name="password" 
+               [(ngModel)]="user.password" 
+               class="neo-input">
+        <label class="label">Contraseña (min 8 car.)</label>
+      </div>
+@if (errorMessage) {
+      <div class="alert alert-danger mt-3">
+        {{ errorMessage }}
+      </div>}
+      @if (successMessage) {
+      <div class="alert alert-success mt-3">
+        {{ successMessage }}
+      </div>}
 
-    <div *ngIf="errorMessage" class="alert alert-error">
-      {{ errorMessage }}
-    </div>
-    
-    <div *ngIf="successMessage" class="alert alert-success">
-      {{ successMessage }}
-    </div>
+      <button type="submit" class="btn btn-primary w-100 py-2 mt-4 shadow-sm">
+        Registrarse
+      </button>
+    </form>
 
-    <button type="submit">Registrarse</button>
-  </form>
-
-  <p class="mt-3">
-    ¿Ya tienes cuenta? <a routerLink="/login">Inicia Sesión aquí</a>
-  </p>
+    <div class="mt-4 text-center">
+      <p class="mb-0 text-muted-dynamic">¿Ya tienes cuenta?</p>
+      <a routerLink="/login" class="text-decoration-none fw-bold text-primary">Inicia Sesión aquí</a>
+    </div>
+  </div>
 </div>
